# Mini-Aims-Portal

./: Admin_ops.cpp  CMakeLists.txt  README.md  Student_ops.cpp  Teacher_ops.cpp  main.cpp  starter_func_declaration.cpp
cpp_files/: Student_ops.cpp  Teacher_ops.cpp  main.cpp
headers/: Admin.h  Student.h  Teacher.h  starter_func.h
